Added two more proper collects for the dead.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -1101,7 +1101,7 @@
 
 \begin{latinenglishsection}
 \latinenglish{
-	Absolve, qu\'{\ae}sumus, D\'{o}mine, \'{a}nimam f\'{a}muli tui (f\'{a}mul\ae tu\ae) {\color{red}N.}, ut def\'{u}nctus (def\'{u}ncta) s\'{\ae}culo tibi vivat: et, qu\ae per fragilit\'{a}tem carnis hum\'{a}na\\ conversati\'{o}ne comm\'{i}sit, tu v\'{e}nia misericord\'{i}ssim\ae piet\'{a}tis abst\'{e}rge. Per D\'{o}minum nostrum Jesum Christum F\'{i}lium tuum, qui tecum vivit et regnat in unit\'{a}te Sp\'{i}ritus Sancti, Deus, per \'{o}mnia s\'{\ae}cula s\ae cul\'{o}rum.
+	Absolve, qu\'{\ae}sumus, D\'{o}mine, \'{a}nimam f\'{a}muli tui (f\'{a}mul\ae\ tu\ae) {\color{red}N.}, ut def\'{u}nctus (def\'{u}ncta) s\'{\ae}culo tibi vivat: et, qu\ae per fragilit\'{a}tem carnis hum\'{a}na\\ conversati\'{o}ne comm\'{i}sit, tu v\'{e}nia misericord\'{i}ssim\ae\\ piet\'{a}tis abst\'{e}rge. Per D\'{o}minum nostrum Jesum Christum F\'{i}lium tuum, qui tecum vivit et regnat in unit\'{a}te Sp\'{i}ritus Sancti, Deus, per \'{o}mnia s\'{\ae}cula s\ae cul\'{o}rum.
 	
 	{\color{red}\Rbar.} Amen.
 }{
@@ -1115,7 +1115,7 @@
 
 \begin{latinenglishsection}
 \latinenglish{
-	Deus, cui pr\'{o}prium est miser\'{e}ri semper et p\'{a}rcere, te s\'{u}pplices exor\'{a}mus pro \'{a}nima f\'{a}muli tui {\color{red}N.} (f\'{a}mul\ae tu\ae {\color{red}N.}), quam h\'{o}die de hoc s\'{\ae}culo migr\'{a}re juss\'{i}sti: ut non tradas eam in manus inim\'{i}mici, neque oblivisc\'{a}ris in finem, sed j\'{u}beas eam a sanctis Angelis s\'{u}scipi, et ad p\'{a}triam parad\'{i}si perd\'{u}ci; ut, quia in te sper\'{a}vit et cr\'{e}diditm non p\oe nas inf\'{e}rni sust\'{i}neatm sed g\'{a}udia \ae t\'{e}rna poss\'{i}deat. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	Deus, cui pr\'{o}prium est miser\'{e}ri semper et p\'{a}rcere, te s\'{u}pplices exor\'{a}mus pro \'{a}nima f\'{a}muli tui {\color{red}N.} (f\'{a}mul\ae\ tu\ae {\color{red}N.}), quam h\'{o}die de hoc s\'{\ae}culo migr\'{a}re juss\'{i}sti: ut non tradas eam in manus inim\'{i}mici, neque oblivisc\'{a}ris in finem, sed j\'{u}beas eam a sanctis Angelis s\'{u}scipi, et ad p\'{a}triam parad\'{i}si perd\'{u}ci; ut, quia in te sper\'{a}vit et cr\'{e}diditm non p\oe nas inf\'{e}rni sust\'{i}neatm sed g\'{a}udia \ae t\'{e}rna poss\'{i}deat. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
 	
 	{\color{red}\Rbar.} Amen.
 }{
@@ -1129,7 +1129,7 @@
 
 \begin{latinenglishsection}
 \latinenglish{
-	Qu\ae sumus, D\'{o}mine, ut \'{a}nimam f\'{a}muli tui {\color{red}N.},\\ (f\'{a}mul\ae tu\ae {\color{red}N.}), cujus depositi\'{o}nis diem t\'{e}rtium ({\color{red}vel} s\'{e}ptimum, {\color{red}vel} trig\'{e}simum) commemor\'{a}mus, sanct\'{o}rum atque elect'{o}rum tu\'{o}rum larg\'{i}ri dign\'{e}ris cons\'{o}rtium: et rorem miseric\'{o}rdi\ae tu\ae per\'{e}nnem inf\'{u}ndas. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	Qu\ae sumus, D\'{o}mine, ut \'{a}nimam f\'{a}muli tui {\color{red}N.},\\ (f\'{a}mul\ae\ tu\ae\ {\color{red}N.}), cujus depositi\'{o}nis diem t\'{e}rtium ({\color{red}vel} s\'{e}ptimum, {\color{red}vel} trig\'{e}simum) commemor\'{a}mus, sanct\'{o}rum atque elect'{o}rum tu\'{o}rum larg\'{i}ri dign\'{e}ris cons\'{o}rtium: et rorem miseric\'{o}rdi\ae tu\ae per\'{e}nnem inf\'{u}ndas. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
 	
 	{\color{red}\Rbar.} Amen.
 }{
@@ -1139,6 +1139,34 @@
 }
 \end{latinenglishsection}
 
+\subsection*{\color{red}Prayer on the Anniversary of Burial}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, indulgenti\'{a}rum D\'{o}mine, da \'{a}nim\ae\ f\'{a}muli tui {\color{red}N.},\\ (f\'{a}mul\ae\ tu\ae\ {\color{red}N.}, {\color{red}vel} anim\'{a}bus famul\'{o}rum famalur\'{u}mque tu\'{a}rum), cujus (quorum) annivers\'{a}rium depositi\'{o}nis diem commemor\'{a}mus, refrig\'{e}rii sedem, qui\'{e}tis\\ beatit\'{u}dinem, et l\'{u}minis clarit\'{a}tem. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, the Lord of mercy and pardon, grant to the soul of Thy servant {\color{red}N.} ({\color{red}or} servants), the anniversary of whose burial we commemorate, the place of refreshment, the blessedness of rest, and the brightness of light. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
 \vfill\pagebreak
+
+\subsection*{\color{red}For a Deceased Pope}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, qui inter summos sacerd\'{o}tes f\'{a}mulum tuum {\color{red}N.} ineff\'{a}bili tua dispositi\'{o}ne connumer\'{a}ri volu\'{i}sti: pr\ae sta, qu\'{\ae}sumus; ut qui Unig\'{e}niti F\'{i}lii tui vices in terris ger\'{e}bat, sanct\'{o}rum tu\'{o}rum Pont\'{i}ficum cons\'{o}rtio perp'{e}tuo aggreg\'{e}tur. Per e\'{u}ndem D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, by whose favor Thy servant {\color{red}N.} was raised to the dignity of the sovereign pontiff, grant, we beseech Thee, that he may be admitted to the eternal society of Thy holy pontiffs in heaven. Through the same Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
 
 \end{document}
