Added the proper collect for a Deceased Bishop.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -1169,4 +1169,66 @@
 }
 \end{latinenglishsection}
 
+\begin{center}
+\par\noindent\rule{0.5\textwidth}{0.4pt}
+\end{center}
+
+\subsection*{\color{red}For a Deceased Bishop}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, qui inter apost\'{o}licos sacerd\'{o}tes f\'{a}mulum tuum {\color{red}N.} (f\'{a}mulos tuos {\color{red}N.} et {\color{red}N.}) pontific\'{a}lis fec\'{i}sti dignit\'{a}te vig\'{e}re: pr\ae sta, qu\'{\ae}sumus, ut e\'{o}rum quoque perp\'{e}tuo aggreg\'{e}(n)tur cons\'{o}rtio. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, by whose favor Thy servant(s) {\color{red}N.} (and {\color{red}N.}) was raised to the dignity of a bishop, and honored with the apostolic functions, grant, we beseech Thee, that he (they) may be admitted to the eternal society of Thy apostles in heaven. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}For a Cardinal-Bishop, say:}
+
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Ep\'{i}scopum Cardin\'{a}lem pontific\'{a}li fec\'{i}sti dign\'{i}tate vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.} was raised to the dignity of Cardinal Bishop.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}For a Cardinal-Priest or Cardinal-Deacon who was also a Bishop, say:}
+
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Presb\'{y}terum ({\color{red}vel} Diaconum)\\ Cardin\'{a}lem pontific\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.}. was raised to the dignity of Cardinal Priest.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}For a Cardinal-Priest who was not a Bishop, say:}
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Presb\'{y}terum Cardin\'{a}lem sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.}. was raised to the dignity of Cardinal Priest.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}For a Cardinal-Deacon who was a priest, say:}
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Di\'{a}conum Cardin\'{a}lem sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.}. was raised to the dignity of Cardinal Deacon.
+}
+\end{latinenglishsection}
+
+\begin{center}
+\par\noindent\rule{0.5\textwidth}{0.4pt}
+\end{center}
+
+
+
 \end{document}
