Added all but one of the remaining proper collects for the dead to the end of Matins.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -848,7 +848,7 @@
 	
 	9. Verbum iníquum constituérunt ad\textbf{vér}sum me:~* Numquid qui dormit non adjíciet ut \textit{re}\textbf{súr}gat?
 	
-	10. Etenim homo pacis meæ, in quo spe\textbf{rá}vi:~* qui edébat panes meos, magnificávit super me supplanta\textit{ti}\textbf{ó}nem.
+	10. Etenim homo pacis meæ, in quo spe\textbf{rá}vi:~* qui edébat panes meos, magnificávit super me\\ supplanta\textit{ti}\textbf{ó}nem.
 	
 	11. Tu autem, Dómine, miserére mei, et resúsci\textbf{ta} me:~* et retríbu\textit{am} \textbf{e}is.
 	
@@ -1187,7 +1187,7 @@
 }
 \end{latinenglishsection}
 
-\subsubsection*{\color{red}For a Cardinal-Bishop, say:}
+\subsubsection*{\color{red}\textit{For a Cardinal-Bishop, say:}}
 
 \begin{latinenglishsection}
 \latinenglish{
@@ -1197,7 +1197,7 @@
 }
 \end{latinenglishsection}
 
-\subsubsection*{\color{red}For a Cardinal-Priest or Cardinal-Deacon who was also a Bishop, say:}
+\subsubsection*{\color{red}\textit{For a Cardinal-Priest or Cardinal-Deacon who was also a Bishop, say:}}
 
 \begin{latinenglishsection}
 \latinenglish{
@@ -1207,7 +1207,7 @@
 }
 \end{latinenglishsection}
 
-\subsubsection*{\color{red}For a Cardinal-Priest who was not a Bishop, say:}
+\subsubsection*{\color{red}\textit{For a Cardinal-Priest who was not a Bishop, say:}}
 \begin{latinenglishsection}
 \latinenglish{
 	f\'{a}mulum tuum {\color{red}N.} Presb\'{y}terum Cardin\'{a}lem sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
@@ -1216,7 +1216,7 @@
 }
 \end{latinenglishsection}
 
-\subsubsection*{\color{red}For a Cardinal-Deacon who was a priest, say:}
+\subsubsection*{\color{red}\textit{For a Cardinal-Deacon who was a priest, say:}}
 \begin{latinenglishsection}
 \latinenglish{
 	f\'{a}mulum tuum {\color{red}N.} Di\'{a}conum Cardin\'{a}lem sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
@@ -1229,6 +1229,118 @@
 \par\noindent\rule{0.5\textwidth}{0.4pt}
 \end{center}
 
+\vfill\pagebreak
+
+\subsection*{\color{red}For a Deceased Priest}
+\begin{latinenglishsection}
+\latinenglish{
+	Deua, qui inter apost\'{o}licus sacerd\'{o}tes f\'{a}mulum tuum {\color{red}N.} (f\'{a}mulus tuos {\color{red}N.} et {\color{red}N.}) sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re: pr\ae sta, qu\'{\ae}sumus, ut e\'{o}rum quoque perp\'{e}tuo aggreg\'{e}(n)tur cons\'{o}rtio. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, by whose favor Thy servant(s) {\color{red}N.}. (and {\color{red}N.}) was raised to the priestly dignity, grant, we beseech Thee, that he (they) may be admitted to the eternal society of Thy apostles in heaven. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{Another Collect for a Deceased Priest}}
+\begin{latinenglishsection}
+\latinenglish{
+	Pr\ae sta, qu\'{\ae}sumus D\'{o}mine, ut \'{a}nima f\'{a}muli tui {\color{red}N.} sacerd\'{o}tis, quem, in hoc s\'{\ae}culo commor\'{a}ntem, sacris mun\'{e}ribus decor\'{a}sti, in c\ae l\'{e}sti sede glori\'{o}sa semper exs\'{u}ltet. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Grant, we beseech Thee, O Lord, that the soul of Thy servant {\color{red}N.}, priest, which whilst he was sojourning in this world, Thou didst adorn with the graces proper to the sacred ministry, may evermore rejoice in the glory of heaven. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\begin{center}
+\par\noindent\rule{0.5\textwidth}{0.4pt}
+\end{center}
+
+\subsection*{\color{red}For a Deceased Man}
+\begin{latinenglishsection}
+\latinenglish{
+	Inclina, D\'{o}mine, aurem tuam ad preces nostras, quibus miseric\'{o}rdiam tuam s\'{u}pplices deprec\'{a}mur: ut \'{a}nimam f\'{a}muli tui {\color{red}N.}, quam de hoc s\'{\ae}culo migr\'{a}re juss\'{i}sti, in pacis ac lucis regi\'{o}ne const\'{i}tuas, et sanct\'{o}rum tu\'{o}rum j\'{u}beas esse cons\'{o}rtem. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Incline, O Lord, Thine ear to our prayers, in which we humbly beseech Thy mercy; that Thou wouldst place the soul of Thy servant {\color{red}N.}, which Thou hast caused to depart from this world, in the region of peace and light; and unite him in the fellowship of Thy saints. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}For a Deceased Woman}
+\begin{latinenglishsection}
+\latinenglish{
+	Qu\ae sumus, D\'{o}mine, pro tua piet\'{a}te miser\'{e}re \'{a}nim\ae\\ f\'{a}mul\ae tu\ae\ {\color{red}N.}: et a cont\'{a}giis mortalit\'{a}tis ex\'{u}tam, in \ae t\'{e}rn\ae\ salvati\'{o}nis partem resti\'{i}tue. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	We beseech Thee, O Lord, of Thy goodness to have mercy on the soul of Thy handmaid {\color{red}N.}; do Thou, who hast freed her from the perils of this mortal life, vouchsafe to number her for evermore among the saved. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+
+\subsection*{\color{red}For Friends and Benefactors}
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, v\'{e}ni\ae\ larg\'{i}tor et hum\'{a}n\ae\ sal\'{u}tis am\'{a}tor: qu\'{\ae}sumus clem\'{e}ntiam tuam; ut nostr\ae\ congregati\'{o}nis fratres, prop\'{i}nquos, et benefact\'{o}res, qui ex hoc s\'{\ae}culo transi\'{e}runt, Beat\'{a} Mar\'{i}a semper V\'{i}rgine interced\'{e}nte cum \'{o}mnibus sanctis tuis, ad perp\'{e}tu\ae\ beatit\'{u}dinis cons\'{o}rtium perven\'{i}re conc\'{e}das. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, the giver of pardon and lover of human salvation, we beseech Thy clemency to grant that the brethren, relations, and benefactors of our congregation who are departed frmo this world may, by the intercession of the Blessed Mary, ever virgin, and of all Thy saints, attain to the fellowship of eternal beatitude. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}For a Father and Mother Deceased}
+\begin{latinenglishsection}
+\latinenglish{
+	Dues, qui nos patrem et matrem honor\'{a}re pr\ae\ cep\'{i}sti: miser\'{e}re clem\'{e}nter anim\'{a}bus patris et matris me\ae, eor\'{u}mque peccata dim\'{i}tte; meque eos in \ae t\'{e}rn\ae\ clarit\'{a}tis g\'{a}udio fac vid\'{e}re. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, who hast commanded us to honor our father and mother, have compassion, in Thy mercy, on the souls of my father and mother, and forgive them their sins, and grant that we may meet in the joy of eternal bliss. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{If the office is for several, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	anim\'{a}bus par\'{e}ntum nostr\'{o}rum {\color{red}and} nosque {\color{red}instead of} meque.
+}{
+	on the souls of our parents, {\color{red}and} we {\color{red}instead of} I.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{If it is for the father only, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	\'{a}nim\ae\ patris mei, {\color{red}or} nostri.
+}{
+	the soul of my ({\color{red}or} our) father.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{If it is for the mother only, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	\'{a}nim\ae\ patris me\ae, {\color{red}or} nostr\ae.
+}{
+	the soul of my ({\color{red}or} our) mother.
+}
+\end{latinenglishsection}
 
 
 \end{document}
