Completed Matins of the Dead.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -1305,7 +1305,7 @@
 \subsection*{\color{red}For a Father and Mother Deceased}
 \begin{latinenglishsection}
 \latinenglish{
-	Dues, qui nos patrem et matrem honor\'{a}re pr\ae\ cep\'{i}sti: miser\'{e}re clem\'{e}nter anim\'{a}bus patris et matris me\ae, eor\'{u}mque peccata dim\'{i}tte; meque eos in \ae t\'{e}rn\ae\ clarit\'{a}tis g\'{a}udio fac vid\'{e}re. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	Deus, qui nos patrem et matrem honor\'{a}re pr\ae\ cep\'{i}sti: miser\'{e}re clem\'{e}nter anim\'{a}bus patris et matris me\ae, eor\'{u}mque peccata dim\'{i}tte; meque eos in \ae t\'{e}rn\ae\ clarit\'{a}tis g\'{a}udio fac vid\'{e}re. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
 	
 	{\color{red}\Rbar.} Amen.
 }{
@@ -1342,5 +1342,43 @@
 }
 \end{latinenglishsection}
 
+\subsection*{\color{red}For all the Faithful Departed}
+\begin{latinenglishsection}
+\latinenglish{
+	Fidelium, Deus, \'{o}mnium C\'{o}nditor et Red\'{e}mptor, anim\'{a}bus famul\'{o}rum famular\'{u}mque tu\'{a}rum remissi\'{o}nem cunct\'{o}rum tr\'{i}bue peccat\'{o}rum: ut indulg\'{e}ntiam, quam semper optav\'{e}runt, piis supplicati\'{o}nibus consequ\'{a}ntur. Qui vivis et regnas cum Deo Patre, in unit\'{a}te Sp\'{i}ritus Sancti Deus, per \'{o}mnia s\'{\ae}cula s\'{\ae}cula s\ae cul\'{o}rum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, the Creator and Redeemer of all the faithful departed, give to the souls of Thy servants, men and women, the remission of all their sins, that by pious supplications they may obtain the pardon which they have always desired. Who livest and reignest with God the Father in the unity of the Holy Spirit, forever and ever.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+
+\begin{center}
+{\color{red}\textit{After the collect, there is always said (always in the plural):}}
+\end{center}
+
+\begin{latinenglishsection}
+\latinenglish{
+	{\color{red}\Vbar.} R\'{e}quiem \ae t\'{e}rnam dona eis, D\'{o}mine.
+	
+	{\color{red}\Rbar.} Et lux perp\'{e}tua l\'{u}ceat eis.
+	
+	{\color{red}\Vbar.} Requi\'{e}scant in pace.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	{\color{red}\Vbar.} Eternal rest grant unto them, O Lord.
+	
+	{\color{red}\Rbar.} And let perpetual light shine upon them.
+	
+	{\color{red}\Vbar.} May they rest in peace.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
 
 \end{document}
